# GDB-MCP

./: .gitignore  BUGS.md  PROMPT.md  README.md  TODO.md  config.json  example  example.c  gdb-mcp.py  prompt.md  pyproject.toml  requirements.txt
gdb/: __init__.py  server.py
gdb/commands/: __init__.py
gdb/core/: gdb.py
gdb/models/: session.py
